fixing padding on IE 7

--- a/css/main.css
+++ b/css/main.css
@@ -48,8 +48,8 @@ h1 span.black{
 }
 
 img.title{
-	padding-top: 40px;
-	padding-bottom: 20px;
+	margin-top: 40px;
+	margin-bottom: 20px;
 }
 
 .animatedText{
